--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -2,32 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@import '@/app/styles/_reset.css';
+
+.main-padding-detail {
+  padding: 0 clamp(min(10vw, 20rem), 5vw, max(100%, 100rem));
+  transition: padding 0.3s ease;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.main-padding-list {
+  padding: 0 clamp(min(1vw, 20rem), 5vw, max(100%, 55rem));
+  transition: padding 0.3s ease;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.search-shadow {
+  box-shadow:
+    0 3px 12px 0 rgba(0, 0, 0, 0.1),
+    0 1px 2px 0 rgba(0, 0, 0, 0.08);
+  border: 1px solid #dddddd;
 }
