--- a/src/app/styles/CardImageBox.css
+++ b/src/app/styles/CardImageBox.css
@@ -3,8 +3,8 @@
 .swiper-button-prev-custom {
   position: absolute; /* 버튼의 위치를 절대 위치로 설정 */
   top: 50%; /* 버튼을 세로 가운데에 위치시킴 */
-  width: 30px; /* 버튼의 너비를 30px로 설정 */
-  height: 30px; /* 버튼의 높이를 30px로 설정 */
+  width: 32px; /* 버튼의 너비를 30px로 설정 */
+  height: 32px; /* 버튼의 높이를 30px로 설정 */
   margin-top: -15px; /* 버튼을 세로 가운데로 맞추기 위한 마진 설정 */
   z-index: 10; /* 버튼이 다른 요소 위에 위치하도록 z-index 설정 */
   cursor: pointer; /* 마우스 커서를 포인터로 변경 */
@@ -60,10 +60,19 @@
     opacity: 1;  /* 활성화된 상태에서 색상 설정 */
   }
 
-  /* 이미지 크기 통일을 위한 스타일 */
+/* 이미지 크기 통일을 위한 스타일 */
+.swiper-slide {
+  position: relative;
+  width: 100%; /*slide img의 가로 길이 설정*/ 
+  padding-top: 95%; /* 높이를 너비의 90%로 설정 */
+}
+
 .swiper-slide img {
-    width: 100%;
-    height: 300px; /* 원하는 높이로 설정 */
-    object-fit: cover; /* 기본적으로 cover로 설정 */
-    border-radius: 12px; /* 모서리를 둥글게 설정 */
-  }
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* 기본적으로 cover로 설정 */
+  border-radius: 12px; /* 모서리를 둥글게 설정 */
+}
